# haskray

./: .gitignore  Awesomium.css  HaskRay.cabal  README.md  UILib.js  anim-conv.sh  bench.html  haskray.cabal  icon.icns  run.bat  run.sh  scenetest.scn  testscript.sh
benchmarks/: Benchmarks.hs
blenderPlugin/: getMesh.py  ui-spec.md
blenderPlugin/render_haskray/: __init__.py  render.py  ui.py
frontend/: Eval.hs  GLDisplay.hs  Main.hs  Settings.hs  Trace.hs
frontend-data/ui/: UI.html  UILib.css
frontend/GLDisplay/: Display.hs  Input.hs  Renderable.hs  UI.hs  Util.hs
src/: HaskRay.hs  Main.hs  Settings.hs
src/GLDisplay/: CameraMode.hs  Display.hs  Input.hs  UI.hs  Util.hs
src/HaskRay/: Geometry.hs  Light.hs  Material.hs  Monad.hs  Octree.hs  Out.hs  Parser.hs  Projection.hs  Ray.hs  RayTree.hs  Scene.hs  Settings.hs  Texture.hs  Vector.hs
src/HaskRay/Geometry/: BoundingBox.hs  Classes.hs  Mesh.hs  Object.hs  Plane.hs  Ray.hs  Shape.hs  Sphere.hs  Util.hs
src/HaskRay/RayTree/: IO.hs  Light.hs  Pixel.hs  Sample.hs  String.hs
src/HaskRay/Vector/: Advanced.hs  Mid.hs  Simple.hs
testscenes/: 1.1.1.5-2.scn  1.1.2.4-2.scn  1.2.1-1.scn  1.2.1-2.scn  1.2.2-2.scn  1.2.3-1.scn  1.2.3-2.scn  1.2.4-2.scn  creeperflat.scn  creepertextured.scn  flatcolours.scn  infinitefloor.scn  reflectivetest.scn  shadowtest.scn  texturetest.scn  transmissivetest.scn  triangletest.scn
testsuite/: properties.hs
