name:                HaskRay

-- The package version.  See the Haskell package versioning policy (PVP)
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

author:              Tom Savage
maintainer:          cam01005@port.ac.uk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
data-files:          ui/*.html, ui/*.css, ui/*.js, ui/icons/*.png
data-dir:            frontend-data

flag buildfrontend
  description:         Build the front-end as well as the library
  default:             True

library
  exposed-modules:
    HaskRay
    HaskRay.Geometry
  other-modules:
    HaskRay.Geometry.BoundingBox
    HaskRay.Geometry.Classes
    HaskRay.Geometry.Mesh
    HaskRay.Geometry.Object
    HaskRay.Geometry.Plane
    HaskRay.Geometry.Ray
    HaskRay.Geometry.Sphere
    HaskRay.Geometry.Util
    HaskRay.Material
    HaskRay.Monad
    HaskRay.Octree
    HaskRay.Parser
    HaskRay.Projection
    HaskRay.RayTree
    HaskRay.RayTree.Light
    HaskRay.RayTree.Pixel
    HaskRay.RayTree.Sample
    HaskRay.RayTree.String
    HaskRay.Scene
    HaskRay.Settings
    HaskRay.Vector
    HaskRay.Vector.Advanced
  build-depends:       base ==4.5.*, bytestring, split ==0.1.*, parallel ==3.2.*, random, mtl, MonadRandom, containers, time, deepseq, monad-parallel
  hs-source-dirs:      src
  ghc-options:         -threaded -O2 -fwarn-incomplete-patterns

executable HaskRay
  main-is:             Main.hs
  other-modules:       GLDisplay, GLDisplay.Display, GLDisplay.Input, GLDisplay.Renderable GLDisplay.Util, GLDisplay.UI, Settings
  build-depends:
    base ==4.5.*,
    HaskRay,
    awesomium,
    mtl,
    bytestring,
    split ==0.1.*,
    parallel ==3.2.*,
    deepseq,
    random,
    MonadRandom,
    containers,
    time,
    GLUT >= 2.3,
    OpenGL >=2.6,
    async,
    Tensor,
    monad-parallel

--  if flag(buildfrontend)
--    build-depends:       base ==4.5.*, HaskRay, bytestring, split ==0.1.*, parallel ==3.2.*, random, MonadRandom, containers, GLUT, OpenGL, async, Tensor
--  else
--    buildable:           False
  hs-source-dirs:      frontend
  ghc-options:         -threaded -eventlog -rtsopts -O2 -fwarn-incomplete-patterns

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  build-depends: base, QuickCheck, HaskRay
  hs-source-dirs: testsuite

executable haskray-benchmarks
  main-is:             Benchmarks.hs
  hs-source-dirs:      benchmarks
  ghc-options:         -threaded -eventlog -rtsopts -O2
  build-depends:
    base ==4.5.*,
    HaskRay,
    split ==0.1.*,
    parallel ==3.2.*,
    random,
    mtl,
    MonadRandom,
    containers,
    time,
    criterion
