name:                HaskRay

-- The package version.  See the Haskell package versioning policy (PVP)
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

author:              Tom Savage
maintainer:          Tom Savage
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

-- Build flags
-- With Cabal, use: --flags=-buildfrontend
-- With Cabal-dev, use: --cabal-install-arg=--flags=-buildfrontend

flag buildfrontend
  description:         Build the front-end as well as the library
  default:             True

flag criterion-benchmarks
  description:         Build Criterion benchmark program
  default:             False

flag debug
  description:         Turn on profiling, stack traces on exceptions
  default:             False

library
  exposed-modules:
    HaskRay
    HaskRay.Geometry
  other-modules:
    HaskRay.Geometry.BoundingBox
    --HaskRay.Geometry.Mesh
    HaskRay.Geometry.Shape
    HaskRay.Geometry.Plane
    HaskRay.Ray
    HaskRay.Geometry.Sphere
    HaskRay.Geometry.Util
    HaskRay.Material
    HaskRay.Monad
    HaskRay.Octree
    HaskRay.Out
    HaskRay.Projection
    HaskRay.Scene
    HaskRay.Settings
    HaskRay.Vector
    HaskRay.Vector.Advanced
  build-depends:       base ==4.5.*, bytestring, split ==0.1.*, parallel ==3.2.*, random, mtl, MonadRandom, containers, time, deepseq, monad-parallel, repa, repa-io, binary
  hs-source-dirs:      src
  if flag(debug)
    ghc-options:         -prof -fprof-auto
  else
    ghc-options:         -threaded -O2
--    ghc-options:         -threaded -O2 -fwarn-type-defaults -fwarn-monomorphism-restriction -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-missing-signatures

executable HaskRay
  main-is:             Main.hs
  if flag(buildfrontend)
    hs-source-dirs:      frontend
    if flag(debug)
      ghc-options:         -prof -fprof-auto -rtsopts -with-rtsopts=-xc
    else
      ghc-options:         -threaded -eventlog -rtsopts -with-rtsopts=-N -O2 -fwarn-type-defaults -fwarn-monomorphism-restriction -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-missing-signatures
    other-modules:       Settings
    build-depends:       base ==4.5.*, HaskRay, random, binary
  else
    buildable:           False

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  build-depends: base, QuickCheck
  hs-source-dirs: testsuite, src

executable haskray-benchmarks
  main-is:             Benchmarks.hs
  hs-source-dirs:      benchmarks
  ghc-options:         -threaded -eventlog -rtsopts -O2
  if flag(criterion-benchmarks)
    build-depends:
      base ==4.5.*,
      HaskRay,
      split ==0.1.*,
      parallel ==3.2.*,
      random,
      mtl,
      MonadRandom,
      containers,
      time,
      criterion
  else
    buildable: False
