name:                haskray

-- The package version.  See the Haskell package versioning policy (PVP)
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

author:              Tom Savage
maintainer:          Tom Savage
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
synopsis:            Purely functional ray tracer
description:         This package was orignally an academic exercise chosen as an undergraduate final year project. The software has since been optimised, modified and extended with additional features. It is now a long-term pet project and research platform; not intended for serious use, but fun to tinker with.

-- Build flags
-- With Cabal, use: --flags=-debug
-- With Cabal-dev, use: --cabal-install-arg=--flags=-debug

flag criterion-benchmarks
  description:         Build Criterion benchmark program
  default:             False

flag debug
  description:         Turn on profiling, stack traces on exceptions
  default:             False

library
  exposed-modules:
    HaskRay
    HaskRay.Geometry
    HaskRay.Material
    HaskRay.Vector
  other-modules:
    HaskRay.Geometry.BoundingBox
    --HaskRay.Geometry.Mesh
    HaskRay.Geometry.Shape
    HaskRay.Geometry.Plane
    HaskRay.Ray
    HaskRay.Geometry.Sphere
    HaskRay.Geometry.Util
    HaskRay.Monad
    HaskRay.Octree
    HaskRay.Out
    HaskRay.Projection
    HaskRay.Scene
    HaskRay.Settings
    HaskRay.Vector.Advanced
  build-depends:       base ==4.6.*, bytestring, split >=0.2.0.0, parallel ==3.2.*, random, mersenne-random-pure64, transformers, MonadRandom, containers, time, deepseq, repa, repa-io <= 3.2.2.201204.1, bmp ==1.2.3.4, binary, monad-par
  hs-source-dirs:      src
  if flag(debug)
    ghc-options:         -fforce-recomp

executable haskray
  main-is:             Main.hs
  hs-source-dirs:      frontend
  if flag(debug)
    ghc-options:         -prof -fprof-auto -rtsopts -with-rtsopts=-xc -fforce-recomp
  else
    ghc-options:         -threaded -eventlog -rtsopts -with-rtsopts=-N -O2 -fwarn-type-defaults -fwarn-monomorphism-restriction -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-missing-signatures
  other-modules:       Settings
  build-depends:       base ==4.6.*, haskray, random, mersenne-random-pure64, binary, time

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  build-depends: base, QuickCheck
  hs-source-dirs: testsuite, src

executable haskray-benchmarks
  main-is:             Benchmarks.hs
  hs-source-dirs:      benchmarks
  ghc-options:         -threaded -eventlog -rtsopts -O2
  if flag(criterion-benchmarks)
    build-depends:
      base ==4.5.*,
      HaskRay,
      split ==0.1.*,
      parallel ==3.2.*,
      random,
      mtl,
      MonadRandom,
      containers,
      time,
      criterion
  else
    buildable: False
